--- a/src/app/Components/associados/associados.component.html
+++ b/src/app/Components/associados/associados.component.html
@@ -7,6 +7,7 @@
             <img src="assets/lankhorst_euronete_brasil_logo.png" />
             <img src="assets/VAN_BEEST.png" />
             <img src="assets/TEIJIN.png" />
+            <img src="assets/TEIJIN.png" />
         </div>
     </div>
     <div class="texto">
