--- a/src/app/Components/associados/associados.component.css
+++ b/src/app/Components/associados/associados.component.css
@@ -6,7 +6,6 @@
   row-gap: 20px;
   flex-direction: column;
   box-sizing: border-box;
-  /* background-color: #00ced1; */
 }
 
 .imagem {
@@ -14,8 +13,6 @@
   flex-direction: column;
   align-self: center;
   width: 100%;
-
-  /* background-color: var(--neutra); */
 }
 
 .imagem h1{
@@ -26,18 +23,7 @@
   width: 300px;
   padding: 0;
   margin: 0 auto 10px;
-
-  /* background-image: var(--fontDegrade1);
-  background-size: 100%;
-  background-repeat: repeat;
-
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  -moz-text-fill-color: transparent; */
-
   border-bottom: 2px solid var(--neutra);
-
 }
 
 .imagem_ord {
@@ -53,6 +39,7 @@
   padding: 5px;
   border-radius: 10px;
   width: 247px;
+  width: calc(100% / 7)
 }
 
 .texto {
@@ -66,15 +53,6 @@
   line-height: 1.5;
   letter-spacing: normal;
   color: var(--neutra);
-
-  /* background-image: var(--fontDegrade1);
-  background-size: 100%;
-  background-repeat: repeat;
-
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  -moz-text-fill-color: transparent; */
 }
 
 .texto p {
@@ -87,18 +65,7 @@
   margin-left: auto;
   margin-right: auto;
   color: var(--neutra);
-
-  /* background-image: var(--fontDegrade1);
-  background-size: 100%;
-  background-repeat: repeat;
-
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  -moz-text-fill-color: transparent; */
 }
-
-
 
 .bttn-SM {
   display: flex;
@@ -121,11 +88,6 @@
     background-color: #027274;
 }
 
-/* .texto .descricao::first-letter {
-    font-size: 2rem;
-} */
-
-
 .bttn-SM:hover {
     background-color: var(--terciaria);
 }
@@ -135,7 +97,6 @@
   .container {
     height: fit-content;
     row-gap: 5px;
-    /* background-color: #00ced1; */
   }
 
   .imagem {
@@ -149,7 +110,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* border: 1px solid black; */
   }
 
   .imagem h1{
@@ -174,7 +134,7 @@
   }
 
   .imagem_ord img{
-    width: calc(100% / 6);
+    width: calc(100% / 7);
   }
 
   .bttn-SM {
@@ -191,12 +151,11 @@
 
 }
 
-@media only screen and  (min-width: 768px) and (max-width: 1280px){
+@media only screen and  (min-width: 760px) and (max-width: 1280px){
 
   .container {
     height: fit-content;
     row-gap: 5px;
-    /* background-color: #00ced1; */
   }
 
   .imagem {
@@ -232,7 +191,7 @@
     flex-direction: row;
   }
   .imagem_ord img{
-    width: calc(100% / 6);
+    width: calc(100% / 7);
   }
 
   .bttn-SM {
@@ -249,12 +208,11 @@
 
 }
 
-@media only screen and  (min-width: 480px) and (max-width: 768px){
+@media only screen and  (min-width: 480px) and (max-width: 760px){
 
   .container {
     height: fit-content;
     row-gap: 5px;
-    /* background-color: #00ced1; */
   }
 
   .imagem {
