Alterado a página sobre nós

--- a/src/app/Components/Associese/seja-um-associado/seja-um-associado.component.html
+++ b/src/app/Components/Associese/seja-um-associado/seja-um-associado.component.html
@@ -2,7 +2,9 @@
     <div class="container">
         <section>
             <h1 class="text">Seja um associado!</h1>
-            <p>Podem se associar à ABICCA indústrias que fabricam cabos de aço, fibras, correntes e acessórios para movimentação de cargas; empresas que comercializam, inspecionam ou realizam manutenção desses produtos; e universidades ou centros de pesquisa envolvidos em atividades de interesse para o setor.
+            <p>Podem se associar à ABICCA indústrias que fabricam cabos de aço, fibras, correntes e acessórios para
+                movimentação de cargas; empresas que comercializam, inspecionam ou realizam manutenção desses produtos;
+                e universidades ou centros de pesquisa envolvidos em atividades de interesse para o setor.
             </p>
             <div class="video-container">
                 <iframe src=" https://www.youtube.com/embed/hv9oXhhOCWs?si=UAl7QDq6I043NfIK"
