--- a/src/app/Components/sobre/sobre.component.html
+++ b/src/app/Components/sobre/sobre.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="containerTextos">
       <H1 class="titulo">SUA EMPRESA SEGURA</H1>
-      <p class="texto">PARA UM MERCADO MAIS JUSTO<br> E REGULAMENTADO</p>
+      <p class="texto"><b>PARA UM MERCADO MAIS JUSTO<br> E REGULAMENTADO</b></p>
       <a href="" class="button" mat-button routerLink="/associese">ASSOCIE-SE</a>
     </div>
 </div>
