--- a/src/app/Components/rodape/rodape.component.html
+++ b/src/app/Components/rodape/rodape.component.html
@@ -1,6 +1,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
 
@@ -28,12 +29,28 @@
             </div>
 
             <div class="box-line-footer">
+                <h3>Marketing e Comunicação</h3>
+                <p>Comunicação&#64;abicca.com.br<br>abicca&#64;abicca.com.br</p>
+            </div>
+
+            <div class="box-line-footer">
+                <h3>Contato</h3>
+                <p class="telefone-contato">Tel / WhatsApp <br>
+                    <a href="https://wa.me/551147898400" target="_blank">+55 (11) 4789-8400</a><br>
+                    <a href="https://wa.me/5521981019948" target="_blank">+55 (21) 98101-9948</a>
+                </p>
+            </div>
+
+            <div class="box-line-footer">
                 <h3>Redes Sociais</h3>
                 <div class="btn-redes">
-                    <a href="https://www.instagram.com/a.b.i.c.c.a/" class="social-btn"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.instagram.com/a.b.i.c.c.a/" class="social-btn"><i
+                            class="bi bi-instagram"></i></a>
                     <a href="https://www.facebook.com/abicca.2024" class="social-btn"><i class="bi bi-facebook"></i></a>
-                    <a href="https://www.youtube.com/@ABICCAAssocia%C3%A7%C3%A3o" class="social-btn"><i class="bi bi-youtube"></i></a>
-                    <a href="https://www.linkedin.com/company/abicca/?viewAsMember=true" class="social-btn"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.youtube.com/@ABICCAAssocia%C3%A7%C3%A3o" class="social-btn"><i
+                            class="bi bi-youtube"></i></a>
+                    <a href="https://www.linkedin.com/company/abicca/?viewAsMember=true" class="social-btn"><i
+                            class="bi bi-linkedin"></i></a>
                 </div>
             </div>
         </div>
