--- a/src/app/Components/noticia/noticia.component.css
+++ b/src/app/Components/noticia/noticia.component.css
@@ -16,18 +16,19 @@
 
 /* Estilo do cartão de notícia */
 .cartao {
-    background-color: #ffffff;
-    border-radius: 12px;
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    display: flex;
-    /* margin-bottom: 40px; */
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  background-color: #ffffff;
+  border-radius: 12px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  display: flex;
+  height: 600px;
+  /* margin-bottom: 40px; */
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .cartao:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
+  transform: translateY(-5px);
+  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
 }
 
 /* Estilo da imagem da notícia */
@@ -35,14 +36,17 @@
   display: flex;
   min-width: 30%;
   max-width: 50%;
+  height: 100%;
   padding: 0 0 0 2%;
 }
 
 .cartao img {
   width: 100%; /* Aumenta o tamanho da imagem */
+  height: 100%;
   margin: auto;
   border-radius: 12px;
   object-fit: cover;
+  object-position: 50% 50%;
 }
 
 /* Estilo do conteúdo da notícia */
