--- a/src/app/Components/noticia/noticia.component.html
+++ b/src/app/Components/noticia/noticia.component.html
@@ -16,10 +16,9 @@
         <span>{{DATA[0].data}}</span>
       </div>
       <p class="descricao">{{DATA[0].descricao.substring(0,400) + '...'}}</p>
-
-      <!-- <div class="botao-container">
-        <button class="botao">Saiba mais</button>
-      </div> -->
+      <div class="botao-container">
+        <button [routerLink]="['/noticias', DATA[0].id]" class="botao">Saiba mais</button>
+      </div>
     </div>
   </div>
 </div>
