--- a/src/styles.css
+++ b/src/styles.css
@@ -62,6 +62,11 @@ h1, h2, h3, h4, h5, h6 {
   --mdc-dialog-container-shape: 5px;
 }
 
+.no-scroll {
+  overflow: hidden;
+  height: 100vh;
+}
+
 @media only screen and (min-width: 768px) and (max-width: 1280px){
   .popup-noticia .mat-mdc-dialog-container{
     min-width: unset;
