--- a/src/app/Components/sobrenos/sobre-nos.component.html
+++ b/src/app/Components/sobrenos/sobre-nos.component.html
@@ -82,6 +82,41 @@
                 desenvolvimento de melhores práticas.</p>
         </div>
     </div>
+    
+    <div class="container2">
+
+        <section aria-labelledby="direitos-deveres">
+            <header>
+                <h1 id="direitos-deveres">Conheça os nossos VALORES</h1>
+            </header>
+
+            <article>
+                <ul>
+                    <h5>Defender as empresas associadas de competições desleais.</h5>
+                    <li>Defender as empresas associadas de
+                        práticas comerciais injustas não só
+                        promove um campo de atuação mais
+                        equitativo para todos, mas também
+                        protege a integridade e a reputação
+                        do setor.</li>
+
+                    <h5>Representar os associados junto a órgãos do governo, para uniformizar as ações das empresas nas
+                        esferas governamentais.</h5>
+                    <li>A ABICCA assume papel de porta-voz,
+                        buscando influenciar e uniformizar
+                        políticas e regulamentações para
+                        beneficiar os setores que representa,
+                        um compromisso com a liderança
+                        ativa, a defesa dos interesses do setor
+                        e o desenvolvimento de um ambiente
+                        de negócios favorável.</li>
+                </ul>
+            </article>
+        </section>
+
+    </div>
+
+
 
     <div class="cta-section">
         <h2>Transforme sua experiência conosco!</h2>
