--- a/src/app/Components/imagens2/imagens2.component.css
+++ b/src/app/Components/imagens2/imagens2.component.css
@@ -7,6 +7,7 @@
   width: 100%;
   height: fit-content;
   /* background-color: var(--neutra); */
+  border-top: 2px solid var(--quarta);
 }
 
 .containerImgs {
